# spaceshift

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: astro.config.mjs  package-lock.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/getting-started/: quickstart.mdx
docs/src/content/docs/reference/: markdown-output.mdx  viewer.mdx
docs/src/content/docs/research/: directional-exploration.mdx  overview.mdx  research-expand.mdx  research-tree.mdx
scripts/: aa_to_litellm_map.json  build_rankings.py  reasoning_config.json
src/cruise_llm/: LLM.py  __init__.py  compare_models.py  evaluate.py  grid_search.py  prompt_probe.py  prompt_search.py  prompt_space.py  subprompt.py
src/cruise_llm/prompt_transforms/: abstract_down.json  abstract_down3.json  abstract_up.json  abstract_up3.json  active_up.json  dimension_down.json  dimension_up.json  improve_naive.json  inverse.json  passive_up.json  recursion.json  reflection.json  rotation.json  scaling.json  shear.json  translator.json
src/cruise_llm/rankings/: static_rankings_2026-03-13.json
src/spaceshift/: LLM.py  __init__.py  cli.py  evaluate.py  grid_search.py  prompt_space.py  research_agent.py  tools.py  utils.py  viewer.py
src/spaceshift/research_models/: followups.json
tests/: superprompting_siblingprompting_chat_msgs.json  test_evaluate.py
