[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spaceshift"
version = "1.1.0"
description = "An open research toolkit powered by LLMs. Branch into questions through tree structures, navigate the full space of perspectives, and grid-search evaluate across prompts and models to find what works best."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Deep Pulusani", email = "deep.pulusani@gmail.com" },
]
keywords = ["llm", "prompt-engineering", "prompt-optimization", "ai", "evaluation", "openai", "anthropic", "litellm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "litellm",
    "python-dotenv",
    "function-schema",
    "rapidfuzz",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/sdeep27/spaceshift"
Repository = "https://github.com/sdeep27/spaceshift"
Documentation = "https://spcshft.com"

[project.scripts]
spaceshift = "spaceshift.cli:main"

[tool.hatch.build]
include = [
    "src/spaceshift/**/*.py",
    "src/spaceshift/**/*.json",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spaceshift"]

