[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spaceshift"
version = "2.0.0"
description = "Interactive CLI prompt exploration toolkit powered by LLMs. Manipulate prompts through transforms, navigate perspectives, compare models, and evaluate across the full space of possible answers."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Deep Pulusani", email = "deep.pulusani@gmail.com" },
]
keywords = ["cli", "exploration", "llm", "ai", "prompt-engineering", "prompt-transforms", "evaluation", "interactive", "openai", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm",
    "python-dotenv",
    "function-schema",
    "rapidfuzz",
    "rich",
    "questionary",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/sdeep27/spaceshift"
Repository = "https://github.com/sdeep27/spaceshift"
Documentation = "https://spcshft.com"

[project.scripts]
spaceshift = "spaceshift.cli:main"

[tool.hatch.build]
include = [
    "src/spaceshift/**/*.py",
    "src/spaceshift/**/*.json",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spaceshift"]

